# nerdshambo

./: README.md  logic.json
c/: nerdshambo  nerdshambo.c
elixir/: mix.exs  nerdshambo
elixir/lib/: nerdshambo.ex
flutter/: README.md  local.properties  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/java/com/example/fluttertest/: MainActivity.java
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: custom_icons.dart  homepage.dart  main.dart
flutter/test/: widget_test.dart
go/: nerdshambo.go
lua/: nerdshambo.lua
nodejs/: nerdshambo.js
python/: nerdshambo.py
ruby/: nerdshambo.rb
rust/: Cargo.toml
rust/src/: main.rs
