[package]
name = "nerdshambo"
version = "0.1.0"
authors = ["OiNutter <will@oinutter.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.4.0", features = ["json"] }
rand = "0.8.3"
